--- a/src/Panama/Resources/Dictionary/DataGrid.xaml
+++ b/src/Panama/Resources/Dictionary/DataGrid.xaml
@@ -45,6 +45,26 @@
 
             <MultiDataTrigger>
                 <MultiDataTrigger.Conditions>
+                    <Condition Binding="{Binding CalcIsSelfPublished}" Value="True"/>
+                    <Condition Binding="{Binding Path=DataContext.Config.Colors.TitleSelfPublished.HasBackground,RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=DataGrid}}" Value="True" />
+                </MultiDataTrigger.Conditions>
+                <MultiDataTrigger.Setters>
+                    <Setter Property="Background" Value="{Binding DataContext.Config.Colors.TitleSelfPublished.BackgroundBrush,RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=DataGrid}}" />
+                </MultiDataTrigger.Setters>
+            </MultiDataTrigger>
+
+            <MultiDataTrigger>
+                <MultiDataTrigger.Conditions>
+                    <Condition Binding="{Binding CalcIsSelfPublished}" Value="True"/>
+                    <Condition Binding="{Binding Path=DataContext.Config.Colors.TitleSelfPublished.HasForeground,RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=DataGrid}}" Value="True" />
+                </MultiDataTrigger.Conditions>
+                <MultiDataTrigger.Setters>
+                    <Setter Property="Foreground" Value="{Binding DataContext.Config.Colors.TitleSelfPublished.ForegroundBrush,RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=DataGrid}}" />
+                </MultiDataTrigger.Setters>
+            </MultiDataTrigger>
+
+            <MultiDataTrigger>
+                <MultiDataTrigger.Conditions>
                     <Condition Binding="{Binding CalcIsSubmitted}" Value="True"/>
                     <Condition Binding="{Binding Path=DataContext.Config.Colors.TitleSubmitted.HasBackground,RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=DataGrid}}" Value="True" />
                 </MultiDataTrigger.Conditions>
