--- a/src/Panama/View/EditControls/ConfigEditColor.xaml
+++ b/src/Panama/View/EditControls/ConfigEditColor.xaml
@@ -24,6 +24,7 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Grid.Resources>
             <Style TargetType="TextBlock" BasedOn="{StaticResource TextBlockLabel}">
@@ -56,23 +57,27 @@
         <TextBlock Grid.Row="2" Text="Published Title"/>
         <con:ColorPicker Grid.Row="2" Grid.Column="1" SelectedColor="{Binding Config.Colors.TitlePublished.Foreground}" ColorSortingMode="{Binding ColorSortingMode}"/>
         <con:ColorPicker Grid.Row="2" Grid.Column="2" SelectedColor="{Binding Config.Colors.TitlePublished.Background}" ColorSortingMode="{Binding ColorSortingMode}"/>
-        
-        <TextBlock Grid.Row="3" Text="Submitted Title"/>
-        <con:ColorPicker Grid.Row="3" Grid.Column="1" SelectedColor="{Binding Config.Colors.TitleSubmitted.Foreground}" ColorSortingMode="{Binding ColorSortingMode}"/>
-        <con:ColorPicker Grid.Row="3" Grid.Column="2" SelectedColor="{Binding Config.Colors.TitleSubmitted.Background}" ColorSortingMode="{Binding ColorSortingMode}"/>
-        
-        <TextBlock Grid.Row="4" Text="Submission Period"/>
-        <con:ColorPicker Grid.Row="4" Grid.Column="1" SelectedColor="{Binding Config.Colors.PublisherPeriod.Foreground}" ColorSortingMode="{Binding ColorSortingMode}"/>
-        <con:ColorPicker Grid.Row="4" Grid.Column="2" SelectedColor="{Binding Config.Colors.PublisherPeriod.Background}" ColorSortingMode="{Binding ColorSortingMode}"/>
-        
-        <TextBlock Grid.Row="5" Text="Goner"/>
-        <con:ColorPicker Grid.Row="5" Grid.Column="1" SelectedColor="{Binding Config.Colors.PublisherGoner.Foreground}" ColorSortingMode="{Binding ColorSortingMode}"/>
-        <con:ColorPicker Grid.Row="5" Grid.Column="2" SelectedColor="{Binding Config.Colors.PublisherGoner.Background}" ColorSortingMode="{Binding ColorSortingMode}"/>
 
-        <TextBlock Grid.Row="6" Text="Alternation"/>
-        <con:ColorPicker Grid.Row="6" Grid.Column="2" SelectedColor="{Binding Config.Colors.DataGridAlternation.Background}" ColorSortingMode="{Binding ColorSortingMode}"/>
+        <TextBlock Grid.Row="3" Text="Self Published Title"/>
+        <con:ColorPicker Grid.Row="3" Grid.Column="1" SelectedColor="{Binding Config.Colors.TitleSelfPublished.Foreground}" ColorSortingMode="{Binding ColorSortingMode}"/>
+        <con:ColorPicker Grid.Row="3" Grid.Column="2" SelectedColor="{Binding Config.Colors.TitleSelfPublished.Background}" ColorSortingMode="{Binding ColorSortingMode}"/>
 
-        <Button Grid.Row="7" Content="Reset" Command="{Binding Commands[ResetColors]}" ToolTip="{x:Static r:Strings.TooltipColorReset}"/>
-        <ItemsControl Grid.Row="8" Grid.ColumnSpan="3" Style="{StaticResource ItemsControlSubSelection}" ItemsSource="{Binding ColorSortingModes}"/>
+        <TextBlock Grid.Row="4" Text="Submitted Title"/>
+        <con:ColorPicker Grid.Row="4" Grid.Column="1" SelectedColor="{Binding Config.Colors.TitleSubmitted.Foreground}" ColorSortingMode="{Binding ColorSortingMode}"/>
+        <con:ColorPicker Grid.Row="4" Grid.Column="2" SelectedColor="{Binding Config.Colors.TitleSubmitted.Background}" ColorSortingMode="{Binding ColorSortingMode}"/>
+        
+        <TextBlock Grid.Row="5" Text="Submission Period"/>
+        <con:ColorPicker Grid.Row="5" Grid.Column="1" SelectedColor="{Binding Config.Colors.PublisherPeriod.Foreground}" ColorSortingMode="{Binding ColorSortingMode}"/>
+        <con:ColorPicker Grid.Row="5" Grid.Column="2" SelectedColor="{Binding Config.Colors.PublisherPeriod.Background}" ColorSortingMode="{Binding ColorSortingMode}"/>
+        
+        <TextBlock Grid.Row="6" Text="Goner"/>
+        <con:ColorPicker Grid.Row="6" Grid.Column="1" SelectedColor="{Binding Config.Colors.PublisherGoner.Foreground}" ColorSortingMode="{Binding ColorSortingMode}"/>
+        <con:ColorPicker Grid.Row="6" Grid.Column="2" SelectedColor="{Binding Config.Colors.PublisherGoner.Background}" ColorSortingMode="{Binding ColorSortingMode}"/>
+
+        <TextBlock Grid.Row="7" Text="Alternation"/>
+        <con:ColorPicker Grid.Row="7" Grid.Column="2" SelectedColor="{Binding Config.Colors.DataGridAlternation.Background}" ColorSortingMode="{Binding ColorSortingMode}"/>
+
+        <Button Grid.Row="8" Content="Reset" Command="{Binding Commands[ResetColors]}" ToolTip="{x:Static r:Strings.TooltipColorReset}"/>
+        <ItemsControl Grid.Row="9" Grid.ColumnSpan="3" Style="{StaticResource ItemsControlSubSelection}" ItemsSource="{Binding ColorSortingModes}"/>
     </Grid>
 </UserControl>
